app/netshoot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
spec:
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
      - name: netshoot
        image: nicolaka/netshoot
        args:
        - sleep
        - infinity
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: netshoot
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netshoot

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badnetshoot
spec:
  selector:
    matchLabels:
      app: badnetshoot
  template:
    metadata:
      labels:
        app: badnetshoot
    spec:
      containers:
      - name: netshoot
        image: nicolaka/netshoot
        args:
        - sleep
        - infinity
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: badnetshoot
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: badnetshoot
